fix(topnav): Set min height rather than max height to ensure expanded navbar is visible

--- a/themes/syndesis/scss/_docs.scss
+++ b/themes/syndesis/scss/_docs.scss
@@ -7,7 +7,8 @@
 
 .docs {
   .content {
-    padding: $navbar-max-height + 25px 0;
+    padding-top: $navbar-min-height + 26px;
+    padding-bottom: $navbar-min-height + 26px;
 
     .list, .single {
       margin-left: 248px;
